# uwu

./: README.md  api_test.py  package-lock.json  package.json
public/assets/: achievements.json
public/assets/personalities/: calm.json  cheerful.json  motivational.json  sassy.json
public/assets/responses/: rules.json
public/themes/: elegance-dark.json  pink.json
scripts/: generate-sprites.mjs  generate_sprites.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/ai/: context.rs  fallback.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  provider.rs
src-tauri/src/features/config/: mod.rs
src-tauri/src/features/customization/: mod.rs
src-tauri/src/features/database/: mod.rs
src-tauri/src/features/database/migrations/: 001_phase2.sql  002_phase3.sql  003_phase6.sql
src-tauri/src/features/events/: mod.rs
src-tauri/src/features/gamification/: achievements.rs  mod.rs  objectives.rs  productivity.rs  streak.rs  types.rs  xp.rs
src-tauri/src/features/quotes/: mod.rs
src-tauri/src/features/reminders/: mod.rs
src-tauri/src/features/system_monitor/: active_window.rs  battery.rs  cpu.rs  memory.rs  mod.rs  network.rs  session.rs
src-tauri/src/features/tts/: mod.rs  piper.rs  provider.rs  sapi.rs
src-tauri/src/features/window/: mod.rs
src/hooks/: useTauriStore.ts
src/store/: moodStore.ts  petStore.ts  settingsStore.ts
src/types/: tauri-commands.ts
(+62 files in other folders)
